    work while it finishes populating its sqlite databases.
  * Add some missing indexes to sqlite databases. This will speed up
    some things involving export and import remotes, and git-annex smudge.
    Microbenchmarks show around 10-25% speedup of sqlite database operations.
  * Improved serialization of filenames and keys to the sqlite databases,
    avoiding encoding problems.

 -- Joey Hess <id@joeyh.name>  Tue, 29 Oct 2019 15:13:03 -0400

git-annex (7.20191219) UNRELEASED; urgency=medium

  * Optimised processing of many files, especially by commands like find
    and whereis that only report on the state of the repository. Commands
    like get also sped up in cases where they have to check a lot of
    files but only transfer a few files. Speedups range from 30-100%.
  * Added build dependency on the filepath-bytestring library.
  * Fixed an oversight that had always prevented annex.resolvemerge
    from being honored, when it was configured by git-annex config.
  * annex.largefiles can be configured by git-annex config,
    to more easily set a default that will also be used by clones,
    without needing to shoehorn the expression into the gitattributes file.
    The git config and gitattributes override that.
  * annex.addunlocked can be set to an expression with the same format used by
    annex.largefiles, when you want to default to unlocking some files but
    not others.
  * annex.addunlocked can be configured by git-annex config.
  * git-annex-config --set/--unset: No longer change the local git config
    setting, except for in the special case of annex.securehashesonly.
  * Improve file ordering behavior when one parameter is "." and other
    parameters are other directories.

 -- Joey Hess <id@joeyh.name>  Wed, 18 Dec 2019 15:12:40 -0400

git-annex (7.20191218) upstream; urgency=medium

  * git-lfs: The url provided to initremote/enableremote will now be
    stored in the git-annex branch, allowing enableremote to be used without