@@ -37,6 +37,16 @@ These settings can be overridden on a per-repository basis using
    This sets a default, which can be overridden by annex.largefiles
    attributes in `.gitattributes` files, or by `git config`.
 
+* `annex.dotfiles`
+
+   Normally, dotfiles are assumed to be files like .gitignore,
+   whose content should always be part of the git repository, so 
+   they will not be added to the annex. Setting annex.dotfiles to true
+   makes dotfiles be added to the annex the same as any other file. 
+
+   This sets a default, which can be overridden by annex.dotfiles
+   in `git config`.
+
 * `annex.addunlocked`
 
    Commands like `git-annex add` default to adding files to the repository
