@@ -5,9 +5,8 @@ git-annex (8.20191107) upstream; urgency=medium
   Existing repositories will be automatically upgraded by default.
   You can prevent this, by runing: git config annex.autoupgraderepository false
  
-  There is no user-visible change between v7 and v8. However, the upgrade
-  process involves regenerating some sqlite databases. There are a couple
-  consequences of the upgrade to keep in mind:
+  The upgrade process involves regenerating some sqlite databases. There are a
+  couple consequences of the upgrade to keep in mind:
 
   * Any incremental fscks that were started in v7 won't resume where
     they left off in v8, but will instead begin again from the first file.
@@ -15,6 +14,11 @@ git-annex (8.20191107) upstream; urgency=medium
     off after upgrade to v8; files will be re-uploaded to the export remote.
   * After the upgrade, git-annex will in some situations have to do extra
     work while it finishes populating its sqlite databases.
+
+  Also, there are some behavior changes around adding dotfiles. While before
+  git-annex add skipped adding dotfiles when operating on whole directories,
+  and added dotfiles that were explicitly listed to the annex, it now adds
+  dotfiles to git by default, unless annex.dotfiles is set to true.
 
  -- Joey Hess <id@joeyh.name>  Thu, 07 Nov 2019 13:21:11 -0400
 
